Added clusters sample + minor changes

--- a/MapsIndoorsSamples/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MapsIndoorsSamples/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,5 +22,8 @@
         <item
             android:id="@+id/nav_positioning"
             android:title="Positioning" />
+        <item
+            android:id="@+id/nav_search"
+            android:title="Search" />
     </group>
 </menu>
