--- a/MapsIndoorsSamples/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MapsIndoorsSamples/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,5 +25,7 @@
         <item
             android:id="@+id/nav_search"
             android:title="Search" />
+        <item android:id="@+id/nav_reverseGeoCode"
+            android:title="Reverse Geocode"/>
     </group>
 </menu>
