--- a/MapsIndoorsSamples/app/src/main/res/navigation/mobile_navigation.xml
+++ b/MapsIndoorsSamples/app/src/main/res/navigation/mobile_navigation.xml
@@ -60,4 +60,10 @@
         android:name="com.mapspeople.mapsindoorssamples.ui.positioning.PositioningFragment"
         android:label="Positioning"
         tools:layout="@layout/fragment_positioning" />
+
+    <fragment
+        android:id="@+id/nav_reverseGeoCode"
+        android:name="com.mapspeople.mapsindoorssamples.ui.reverseGeoCode.ReverseGeoCodeFragment"
+        android:label="ReverseGeoCode"
+        tools:layout="@layout/fragment_positioning" />
 </navigation>
